--- a/frontend/svelte-typescript/src/app.html
+++ b/frontend/svelte-typescript/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" style="background-image: linear-gradient(45deg, #f3ec78, #af4261); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
